wesago_dep/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-wesago
  namespace: gic-wesago
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-wesago
  template:
    metadata:
      labels:
        app: nginx-wesago
    spec:
      containers:
        - name: nginx-wesago
          image: registry.deti/gic-wesago/nginx:v1

          ports:
            - containerPort: 80

          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"

          volumeMounts:
            - name: static
              mountPath: /app/static
            - name: media
              mountPath: /app/media
            - name: config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              readOnly: true

      volumes:
        - name: static
          persistentVolumeClaim:
            claimName: wesago-static-pvc
        - name: media
          persistentVolumeClaim:
            claimName: wesago-media-pvc
        - name: config
          configMap:
            name: nginx-wesago-conf
            items:
               - key: nginx.conf
                 path: nginx.conf
