wesago_dep/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-wesago-svc
  namespace: gic-wesago
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx-wesago
